styles.css
/* ... */
.modtype_hsuforum .no-overflow,
.modtype_hsuforum.activity:after {
    clear: both;
}

.discussnavigation {
    width: auto;
}

.discussnavigation:after{
    content: '';
    clear: both;
    line-height: 1px;
}

.discussnavigation .navigateprevious, .discussnavigation .navigatenext {
    width: 50%;
}

.discussnavigation .navigateprevious div:first-child, .discussnavigation .navigatenext div:first-child{
    font-variant: small-caps;
}

.discussnavigation .navigateprevious {
    text-align: left;
    float: left;
}

.discussnavigation .navigatenext {
    text-align: right;
    float: right;
}

.hsuforum-threshold-blocked .hsuforum-post-figure,
.hsuforum-threshold-blocked .hsuforum-post-body {
    display: none;
}

.modtype_hsuforum.activity:before,
.modtype_hsuforum.activity:after,
.modtype_hsuforum.activity .unread:before {
    content: "";
    display: table;
    clear: both;
}

.path-mod-hsuforum .discussioncontrols .managesubslink {
    float: left;
}

.path-mod-hsuforum #id_displayperiod {
    margin-bottom: 1em;
}

.dateformtarget {
    margin-bottom: 1em;
}

.timedpost.smallicon {
    vertical-align: top;
    height: 1em;
    margin-top: 0.1em;
}

.path-mod-hsuforum .hsuforum-post-target:target {
    -webkit-animation: target-fade 3s 1;
            animation: target-fade 3s 1;
}

@-webkit-keyframes target-fade {
    0% {
        background-color: rgba(0,0,0,.1);
    }
    100% {
        background-color: rgba(0,0,0,0);
    }
}

@keyframes target-fade {
    0% {
        background-color: rgba(0,0,0,.1);
    }
    100% {
        background-color: rgba(0,0,0,0);
    }
}

.path-mod-hsuforum .advancedoptions label {
    text-align: right;
}

.path-mod-hsuforum .advancedoptions label input {
    margin-right: 0;
}

.path-mod-hsuforum .advancedoptions .dateform_fieldset {
    text-align: right;
}

.path-mod-hsuforum .advancedoptions .dateform_fieldset input[type="checkbox"] {
    float: right;
    margin-top: 0.5em;
    margin-left: 0.25em;
    margin-right: 0;
}

.path-mod-hsuforum .advancedoptions #fitem_id_timestart,
.path-mod-hsuforum .advancedoptions #fitem_id_timeend {
    margin: 0.5em 0;
}

#page-mod-hsuforum-view img.mceIcon, #page-mod-hsuforum-discuss img.mceIcon {
    padding: 0px;
}
#page-mod-hsuforum-view span.mceIcon, #page-mod-hsuforum-discuss span.mceIcon {
    padding: 7px;
}

/* We need to find the text container, div for Atto and iframe for TinyMCE, ids are autogenerated, so that's why
the use of id^="" */
#page-mod-hsuforum-view .editor_atto div[id^="editor-target-container"],
#page-mod-hsuforum-discuss .editor_atto div[id^="editor-target-container"],
#page-mod-hsuforum-view  iframe[id^="editor-target-container"],
#page-mod-hsuforum-discuss iframe[id^="editor-target-container"] {
    min-height: 8em !important;
}

#page-mod-hsuforum-view .editor-attachments,
#page-mod-hsuforum-discuss .editor-attachments {
    padding-top: 0.5em;
    margin-top: 0.5em;
}

/* Additional styles for right alignment. */
.forumsearch {
    float: right;
}

#searchforums {
    margin: auto;
}

/* Recover data-placeholder attribute from for post message div*/
[contenteditable]:empty:before {
    content: attr(data-placeholder);
    color: grey;
    display: inline-block;
    mix-blend-mode: difference;
}

#page-mod-hsuforum-view #hsuforum_gradingcriteria {
    margin-top: 0.5em;
}

